--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/scripts.js"></script>
+    <title>Survey</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Tell me about yourself</h1>
+        <form id="survey">
+            <div class="form-group">
+                <label for="name">What's your name?</label>
+                <input id="name" class="form-control" type="text">
+            </div>
+            <button type="submit" class="btn-success">Submit</button>
+        </form>
+    </div> 
 </body>
 </html>
